[package]
name = "mwc"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Rust reimplementation of wc utility."

[dependencies]
clap = { version = "4.5.39", features = ["derive"] }
thiserror = "2.0.12"
unicode-width = { version = "0.2.1", default-features = false }

[dev-dependencies]
assert_cmd = "2.0.17"
assert_fs = "1.1.3"
predicates = "3.1.3"
